--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.0.1
 itsdangerous==2.0.1
-Werkzeug==2.0.1
 SQLAlchemy==1.4.22
+Flask-SQLAlchemy==2.5.1
+Werkzeug==2.0.1
 firebase-admin==5.0.0
